Revision history for Net-Checkpoint-Management-v1: {{ $dist->version }}

{{ $NEXT }}
    - add access_roles methods

0.001003  2019-07-09 15:48:51+02:00 Europe/Vienna
    - fix get methods required an unnecessary id
      has to be specified as uid in the parameters for most objects
    - add service_groups and session methods

0.001002  2019-04-23 11:06:31+02:00 Europe/Vienna
    - fix Role::ObjectMethods abstract and list_$object documentation
    - fix skipping of api.t when environment variables aren't set
    - fix stale http status code output in api_versions
    - fix delete methods
    - use Carp::Clan for better error reporting
    - improve error reporting by falling back to the message if no error message
      is returned
    - add discard method
    - discard changes in api.t
      to not cause locks on the management server used for testing
    - add test for update_accessrule

0.001001  2019-04-12 13:44:14+02:00 Europe/Vienna
    - Initial release using the JSON API version 1