@@ -1,6 +1,8 @@
 Revision history for Net-Checkpoint-Management-v1: {{ $dist->version }}
 
 {{ $NEXT }}
+    - fix error handling of responses which contain the error message in a key
+      named 'message' instead of 'error'
     - add access_roles methods
 
 0.001003  2019-07-09 15:48:51+02:00 Europe/Vienna
